--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -4,3 +4,25 @@
   padding: 0;
   font-family: system-ui;
 }
+
+a, button {
+  font-weight: 600;
+  font-size: inherit;
+  text-decoration: none;
+  border: none;
+  color: #F7F7F7;
+  background-color: transparent;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
