--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,4 +1,20 @@
 // Color
-$primary-clr: #2C3E50;
-$secondary-clr: #F7F7F7;
-$accent-clr: #F1C40F;
+$primary-clr: #2c3e50;
+$secondary-clr: #f7f7f7;
+$accent-clr: #f1c40f;
+
+// -----2-----
+$primary-clr: #34495e;
+$secondary-clr: #ecf0f1;
+$accent-clr: #e74c3c;
+
+// -----3-----
+$primary-clr: #2c3e50;
+$secondary-clr: #bdc3c7;
+$accent-clr: #16a085;
+
+// -----4-----
+$primary-clr: #2c3e50;
+$primary-clr: #1A202C;
+$secondary-clr: #f5f5f5;
+$accent-clr: #ff6f61;
