--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,13 @@
 @import "./common";
 @import "./media-query";
 
+.box {
+  width: 100px;
+  height: 100px;
+  border: 1px solid;
+}
+
+
 // Header Start
 header {
   background-color: $primary-clr;
