--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,40 @@
 /* EXTRA SMALL DEVICES (PORTRAIT PHONE, less than 576px) */
+@media (max-width: 575.98px) {
+  .header {
+    padding: 10px 0;
+    height: 55px;
+  }
+  .header__logo img {
+    height: 35px;
+  }
+  .header__nav {
+    display: none;
+  }
+  .header__btn {
+    display: none;
+  }
+  .header__hamburgermenu-icon {
+    display: block;
+  }
+  .header__hamburgermenu-icon i {
+    font-size: 30px;
+  }
+  .hamburgermenu {
+    height: calc(100vh - 55px);
+  }
+}
 /* SMALL DEVICES (LANSCAPE PHONE, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .header__nav {
+    display: none;
+  }
+  .header__btn {
+    display: none;
+  }
+  .header__hamburgermenu-icon {
+    display: block;
+  }
+}
 /* MEDIUM DEVICES (TABLETS, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
   .header__nav {
