--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -5,6 +5,11 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+// Section Padding
+.hero {
+  padding: 30px 0;
+}
+
 // Text
 p {
   color: $text-clr;
@@ -40,7 +45,7 @@ i {
 .container {
   margin: auto;
   width: 90%;
-  // border: 1px solid red;
+  border: 1px solid red;
 }
 
 .flex-wrapper,
