--- a/css/media.css
+++ b/css/media.css
@@ -22,6 +22,28 @@
   .hamburgermenu {
     height: calc(100vh - 55px);
   }
+  .hero__container {
+    height: calc(100vh + 20px);
+  }
+  .hero__wrapper {
+    grid-gap: 30px;
+  }
+  .hero__content {
+    grid-area: 2/1/2/9;
+    width: 140%;
+  }
+  .hero__content h1 {
+    width: 10ch;
+  }
+  .hero__content p {
+    line-height: 27px;
+  }
+  .hero__image {
+    grid-area: 1/2/1/11;
+  }
+  .hero__social {
+    display: none;
+  }
 }
 /* SMALL DEVICES (LANSCAPE PHONE, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
@@ -34,6 +56,25 @@
   .header__hamburgermenu-icon {
     display: block;
   }
+  .hero__container {
+    height: calc(100vh + 20px);
+  }
+  .hero__wrapper {
+    grid-gap: 40px;
+  }
+  .hero__content {
+    grid-area: 2/1/3/13;
+  }
+  .hero__content h1 {
+    width: 10ch;
+  }
+  .hero__image {
+    grid-area: 1/3/1/11;
+  }
+  .hero__social {
+    grid-area: 1/12;
+    align-self: center;
+  }
 }
 /* MEDIUM DEVICES (TABLETS, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -45,6 +86,25 @@
   }
   .header__hamburgermenu-icon {
     display: block;
+  }
+  .hero__container {
+    height: calc(100vh + 150px);
+  }
+  .hero__wrapper {
+    grid-gap: 40px;
+  }
+  .hero__content {
+    grid-area: 2/1/3/13;
+  }
+  .hero__content h1 {
+    width: 10ch;
+  }
+  .hero__image {
+    grid-area: 1/3/1/11;
+  }
+  .hero__social {
+    grid-area: 1/12;
+    align-self: center;
   }
 }
 /* LARGE DEVICES (DESKTOPS, 992px and up) */
