--- a/scss/media.scss
+++ b/scss/media.scss
@@ -30,6 +30,39 @@
     height: calc(100vh - 55px);
   }
   // HEADER END
+
+  // HERO START
+  .hero {
+    &__container {
+      height: calc(100vh + 20px);
+    }
+
+    &__wrapper {
+      grid-gap: 30px;
+    }
+
+    &__content {
+      grid-area: 2/1/2/9;
+      width: 140%;
+
+      h1 {
+        width: 10ch;
+      }
+
+      p {
+        line-height: 27px;
+      }
+    }
+
+    &__image {
+      grid-area: 1/2/1/11;
+    }
+
+    &__social {
+      display: none;
+    }
+  }
+  // HERO END
 }
 
 /* SMALL DEVICES (LANSCAPE PHONE, 576px and up) */
@@ -49,6 +82,35 @@
     }
   }
   // HEADER END
+
+  // HERO START
+  .hero {
+    &__container {
+      height: calc(100vh + 20px);
+    }
+
+    &__wrapper {
+      grid-gap: 40px;
+    }
+
+    &__content {
+      grid-area: 2/1/3/13;
+
+      h1 {
+        width: 10ch;
+      }
+    }
+
+    &__image {
+      grid-area: 1/3/1/11;
+    }
+
+    &__social {
+      grid-area: 1 / 12;
+      align-self: center;
+    }
+  }
+  // HERO END
 }
 
 /* MEDIUM DEVICES (TABLETS, 768px and up) */
@@ -68,6 +130,35 @@
     }
   }
   // HEADER END
+
+  // HERO START
+  .hero {
+    &__container {
+      height: calc(100vh - -150px);
+    }
+
+    &__wrapper {
+      grid-gap: 40px;
+    }
+
+    &__content {
+      grid-area: 2/1/3/13;
+
+      h1 {
+        width: 10ch;
+      }
+    }
+
+    &__image {
+      grid-area: 1/3/1/11;
+    }
+
+    &__social {
+      grid-area: 1 / 12;
+      align-self: center;
+    }
+  }
+  // HERO END
 }
 
 /* LARGE DEVICES (DESKTOPS, 992px and up) */
