--- a/css/main.css
+++ b/css/main.css
@@ -31,8 +31,12 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-.hero {
-  padding: 30px 0;
+html {
+  scroll-behavior: smooth;
+}
+
+.section-padding {
+  padding: 50px 0 30px;
 }
 
 p {
@@ -40,12 +44,18 @@ p {
 }
 
 .btn {
-  border: 1px solid;
   padding: 15px 30px;
+  color: #1C2833;
+  background-color: #1abc9c;
+  border: 1px solid transparent;
   border-radius: 8px;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
-.btn:hover a {
+.btn:hover {
   color: #1abc9c;
+  background-color: transparent;
+  border-color: #1abc9c;
 }
 
 a:hover {
@@ -95,9 +105,8 @@ nav ul {
 }
 
 .header {
-  padding: 5px 0;
-  height: 60px;
-  border: 1px solid white;
+  height: 70px;
+  place-content: end;
   background-color: #1C2833;
 }
 .header__logo img {
@@ -110,13 +119,8 @@ nav ul {
   font-weight: 400;
 }
 .header__btn a {
-  padding: 15px 30px;
-  background-color: #1abc9c;
-  border: none;
-}
-.header__btn a:hover {
-  background-color: #f5f5f5;
-  cursor: pointer;
+  padding: 15px 35px;
+  font-weight: 700;
 }
 .header__hamburgermenu-icon {
   display: none;
@@ -191,10 +195,10 @@ nav ul {
 }
 
 .hero {
+  height: calc(100vh - 70px);
   background-color: #1C2833;
 }
 .hero__container {
-  height: calc(100vh - 120px);
   place-content: center;
 }
 .hero__wrapper {
@@ -215,11 +219,23 @@ nav ul {
 }
 .hero__content p {
   margin: 20px 0 50px;
+  width: 85%;
   line-height: 25px;
 }
 .hero__content p span {
   font-weight: 700;
   color: #1abc9c;
+}
+.hero__content a:not(:last-child) {
+  margin-right: 10px;
+  color: #1abc9c;
+  background-color: transparent;
+  border-color: #1abc9c;
+}
+.hero__content a:not(:last-child):hover {
+  color: #1C2833;
+  background-color: #1abc9c;
+  border-color: transparent;
 }
 .hero__image {
   grid-area: 1/7/2/12;
