--- a/css/media.css
+++ b/css/media.css
@@ -36,10 +36,12 @@
     width: 10ch;
   }
   .hero__content p {
+    width: 100%;
     line-height: 27px;
   }
   .hero__image {
-    grid-area: 1/2/1/11;
+    grid-area: 1/1/1/12;
+    padding: 0 13px 0 0;
   }
   .hero__social {
     display: none;
@@ -57,7 +59,7 @@
     display: block;
   }
   .hero__container {
-    height: calc(100vh + 20px);
+    height: calc(100vh + 100px);
   }
   .hero__wrapper {
     grid-gap: 40px;
@@ -68,8 +70,11 @@
   .hero__content h1 {
     width: 10ch;
   }
+  .hero__content p {
+    width: 100%;
+  }
   .hero__image {
-    grid-area: 1/3/1/11;
+    grid-area: 1/1/1/11;
   }
   .hero__social {
     grid-area: 1/12;
@@ -100,7 +105,7 @@
     width: 10ch;
   }
   .hero__image {
-    grid-area: 1/3/1/11;
+    grid-area: 1/1/1/11;
   }
   .hero__social {
     grid-area: 1/12;
