--- a/scss/media.scss
+++ b/scss/media.scss
@@ -50,12 +50,14 @@
       }
 
       p {
+        width: 100%;
         line-height: 27px;
       }
     }
 
     &__image {
-      grid-area: 1/2/1/11;
+      grid-area: 1 / 1 / 1 / 12;
+      padding: 0 13px 0 0;
     }
 
     &__social {
@@ -86,7 +88,7 @@
   // HERO START
   .hero {
     &__container {
-      height: calc(100vh + 20px);
+      height: calc(100vh + 100px);
     }
 
     &__wrapper {
@@ -99,10 +101,14 @@
       h1 {
         width: 10ch;
       }
+
+      p {
+        width: 100%;
+      }
     }
 
     &__image {
-      grid-area: 1/3/1/11;
+      grid-area: 1/1/1/11;
     }
 
     &__social {
@@ -134,7 +140,7 @@
   // HERO START
   .hero {
     &__container {
-      height: calc(100vh - -150px);
+      height: calc(100vh + 150px);
     }
 
     &__wrapper {
@@ -150,7 +156,7 @@
     }
 
     &__image {
-      grid-area: 1/3/1/11;
+      grid-area: 1/1/1/11;
     }
 
     &__social {
