--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,8 @@
 /* EXTRA SMALL DEVICES (PORTRAIT PHONE, less than 576px) */
 @media (max-width: 575.98px) {
+  .btn {
+    padding: 13px 15px;
+  }
   .header {
     padding: 10px 0;
     height: 55px;
@@ -17,13 +20,16 @@
     display: block;
   }
   .header__hamburgermenu-icon i {
-    font-size: 30px;
+    font-size: 28px;
   }
   .hamburgermenu {
-    height: calc(100vh - 55px);
+    height: calc(100svh - 55px);
   }
-  .hero__container {
-    height: calc(100vh + 20px);
+  .hero {
+    height: 100%;
+  }
+  .hero.section-padding {
+    padding: 40px 0;
   }
   .hero__wrapper {
     grid-gap: 30px;
@@ -36,6 +42,7 @@
     width: 10ch;
   }
   .hero__content p {
+    margin: 20px 0 40px;
     width: 100%;
     line-height: 27px;
   }
@@ -58,8 +65,11 @@
   .header__hamburgermenu-icon {
     display: block;
   }
-  .hero__container {
-    height: calc(100vh + 100px);
+  .hero {
+    height: 100%;
+  }
+  .hero.section-padding {
+    padding: 50px 0;
   }
   .hero__wrapper {
     grid-gap: 40px;
@@ -92,20 +102,25 @@
   .header__hamburgermenu-icon {
     display: block;
   }
-  .hero__container {
-    height: calc(100vh + 150px);
+  .hero {
+    height: 100%;
   }
   .hero__wrapper {
     grid-gap: 40px;
   }
   .hero__content {
     grid-area: 2/1/3/13;
+    text-align: center;
   }
-  .hero__content h1 {
+  .hero h1 {
+    margin: 0 auto;
     width: 10ch;
   }
+  .hero p {
+    margin: 20px auto 50px;
+  }
   .hero__image {
-    grid-area: 1/1/1/11;
+    grid-area: 1/3/1/11;
   }
   .hero__social {
     grid-area: 1/12;
@@ -114,8 +129,14 @@
 }
 /* LARGE DEVICES (DESKTOPS, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
+  .section-padding {
+    padding: 20px 0;
+  }
   .header__nav ul {
     gap: 30px;
+  }
+  .hero {
+    place-content: center;
   }
 }
 /* EXTRA LARGE DEVICES (LARGE DESKTOPS, 1200px and up) */
