--- a/css/main.css
+++ b/css/main.css
@@ -39,11 +39,16 @@ html {
   padding: 50px 0 30px;
 }
 
+.about {
+  background-color: #ECF0F1;
+}
+
 p {
   color: #f5f5f5;
 }
 
 .btn {
+  display: inline-block;
   padding: 15px 30px;
   color: #1C2833;
   background-color: #1abc9c;
@@ -105,10 +110,16 @@ nav ul {
 }
 
 .header {
+  padding-bottom: 8px;
+  width: 100%;
   height: 70px;
   place-content: end;
   background-color: #1C2833;
   z-index: 200;
+  -webkit-transition: -webkit-backdrop-filter 0.3s ease;
+  transition: -webkit-backdrop-filter 0.3s ease;
+  transition: backdrop-filter 0.3s ease;
+  transition: backdrop-filter 0.3s ease, -webkit-backdrop-filter 0.3s ease;
 }
 .header__logo img {
   height: 50px;
@@ -131,6 +142,12 @@ nav ul {
 }
 .header__hamburgermenu-icon .fa-xmark {
   display: none;
+}
+
+.scrolled {
+  background: rgba(28, 40, 51, 0.6588235294);
+  backdrop-filter: blur(7.9px);
+  -webkit-backdrop-filter: blur(7.9px);
 }
 
 .hamburgermenu {
@@ -260,4 +277,54 @@ nav ul {
 }
 .hero__social .social i {
   font-size: 15px;
+}
+
+.about {
+  height: 100vh;
+  place-content: center;
+}
+.about__container {
+  border: 1px solid green;
+}
+.about__image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.about__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  grid-template-rows: repeat(12, 1fr);
+  grid-gap: 10px;
+}
+.about__text {
+  padding: 20px 0;
+  border: 3px solid;
+  grid-row: 1/10;
+}
+.about__text .typewrite {
+  font-size: 20px;
+  font-weight: 700;
+  color: #1abc9c;
+  border-right: 4px solid #1abc9c;
+}
+.about__text p {
+  margin: 20px 0 30px;
+  font-weight: 500;
+  color: #1C2833;
+  line-height: 25px;
+}
+.about__text-btn:hover {
+  background-color: #1C2833;
+  border: 1px solid transparent;
+}
+.about__skill {
+  -ms-flex-line-pack: center;
+      align-content: center;
+  border: 3px solid;
+  grid-row: 10/13;
+}
+.about__skill i {
+  color: #1C2833;
 }
